Fix `z-index` for contact form

--- a/style.css
+++ b/style.css
@@ -348,6 +348,7 @@ a:hover {
     left: 0;
     background: rgba(0, 0, 0, 0.8);
     position: fixed;
+    z-index: 2;
 }
 
 .contact-form form {
